Fix incorrect args for development release workflow

--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -26,9 +26,9 @@ jobs:
       - name: Package and release for Retail
         uses: BigWigsMods/packager@master
         with:
-          args: -w wowi-id 0
+          args: -w 0
 
       - name: Package and release for Classic
         uses: BigWigsMods/packager@master
         with:
-          args: -g 1.13.5 -w 0
+          args: -g classic -w 0
