--- a/.github/workflows/stable.yml
+++ b/.github/workflows/stable.yml
@@ -29,4 +29,4 @@ jobs:
       - name: Package and release for Classic
         uses: BigWigsMods/packager@master
         with:
-          args: -g 1.13.5
+          args: -g classic
