--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -18,6 +18,11 @@ jobs:
             - name: Clone project
               uses: actions/checkout@v1
 
+            - name: Package and release for Wrath
+              uses: BigWigsMods/packager@master
+              with:
+                  args: -g wrath -w 0
+
             - name: Package and release for Retail
               uses: BigWigsMods/packager@master
               with:
