--- a/.github/workflows/stable.yml
+++ b/.github/workflows/stable.yml
@@ -3,8 +3,10 @@ name: Package and release stable builds
 on:
     push:
         tags:
-            - "*.*.*"
-            - "!*.*.*-*"
+            - "!v*.*.*-*"
+            - "!v*.*-*"
+            - "v*.*.*"
+    workflow_dispatch:
 
 jobs:
     release:
@@ -18,6 +20,7 @@ jobs:
         steps:
             - name: Clone project
               uses: actions/checkout@v1
+
             - name: Package and release for Wrath
               uses: BigWigsMods/packager@master
               with:
