--- a/.github/workflows/stable.yml
+++ b/.github/workflows/stable.yml
@@ -3,9 +3,9 @@ name: Package and release stable builds
 on:
     push:
         tags:
+            - "v*.*.*"
             - "!v*.*.*-*"
             - "!v*.*-*"
-            - "v*.*.*"
     workflow_dispatch:
 
 jobs:
@@ -15,6 +15,7 @@ jobs:
         env:
             CF_API_KEY: ${{ secrets.CF_API_KEY }}
             WOWI_API_TOKEN: ${{ secrets.WOWI_API_TOKEN }}
+            WAGO_API_TOKEN: ${{ secrets.WAGO_API_TOKEN }}
             GITHUB_OAUTH: ${{ secrets.GITHUB_TOKEN }}
 
         steps:
