Add addon version

--- a/.github/ISSUE_TEMPLATE/bug-report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yaml
@@ -10,6 +10,10 @@ body:
       attributes:
           label: Interface Version
           placeholder: 10.0.0
+    - type: input
+      id: addon_version
+      attributes:
+          label: AddOn Version
     # - type: markdown
     #   attributes:
     #       value: |
