--- a/.github/ISSUE_TEMPLATE/bug-report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yaml
@@ -9,10 +9,14 @@ body:
       id: version
       attributes:
           label: Interface Version
+      validations:
+          required: true
     - type: input
       id: addon_version
       attributes:
           label: AddOn Version
+      validations:
+          required: true
     # - type: markdown
     #   attributes:
     #       value: |
