--- a/.github/ISSUE_TEMPLATE/bug-report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yaml
@@ -27,6 +27,7 @@ body:
           label: Please supply any screenshots relevant to this issue.
     - type: textarea
       attributes:
-          label: Please copy and paste the entire contents of your saved variables (/WTF/Account/YOURACCOUNTNAME/SavedVariables).
+          label: Please copy and paste the entire contents of your saved variables.
+          description: (/WTF/Account/YOURACCOUNTNAME/SavedVariables)
       validations:
           required: true
