--- a/.github/ISSUE_TEMPLATE/bug-report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yaml
@@ -29,5 +29,8 @@ body:
       attributes:
           label: Please copy and paste the entire contents of your saved variables.
           description: (/WTF/Account/YOURACCOUNTNAME/SavedVariables)
+          value: "```lua
+              -- Select this line and paste your contents here.
+              ```"
       validations:
           required: true
