--- a/.github/ISSUE_TEMPLATE/bug-report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yaml
@@ -27,14 +27,5 @@ body:
           label: Please supply any screenshots relevant to this issue.
     - type: textarea
       attributes:
-          label: Please copy and paste the entire contents of your saved variables.
+          label: Please supply a copy of your saved variables.
           description: (/WTF/Account/YOURACCOUNTNAME/SavedVariables)
-          render: Lua
-          # value: "<details>
-          #     <summary>Saved Variables</summary>
-
-          #     ```lua
-          #     -- Select this line and paste your contents here.
-          #     ```
-
-          #     </SavedVariables>"
