--- a/.github/ISSUE_TEMPLATE/bug-report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yaml
@@ -28,4 +28,4 @@ body:
     - type: textarea
       attributes:
           label: Please supply a copy of your saved variables.
-          description: (/WTF/Account/YOURACCOUNTNAME/SavedVariables)
+          description: ./WTF/Account/YOURACCOUNTNAME/SavedVariables
