Check for disabled addons

--- a/.github/ISSUE_TEMPLATE/bug-report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yaml
@@ -17,6 +17,12 @@ body:
           placeholder: e.g. v3.0.0
       validations:
           required: true
+    - type: checkboxes
+      attributes:
+          label: Have you replicated this error without any other addons loaded?
+          options:
+              - label: Yes
+              - label: No
     - type: textarea
       attributes:
           label: What steps did you take leading up to this issue?
