Update SV label

--- a/.github/ISSUE_TEMPLATE/bug-report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yaml
@@ -36,5 +36,5 @@ body:
           label: Please supply any screenshots relevant to this issue.
     - type: textarea
       attributes:
-          label: Please supply a copy of your saved variables.
+          label: Please supply a copy of your saved variables to help expediate the troubleshooting process.
           description: ./WTF/Account/YOURACCOUNTNAME/SavedVariables
