--- a/.github/ISSUE_TEMPLATE/bug-report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yaml
@@ -39,5 +39,5 @@ body:
           label: Please supply any screenshots relevant to this issue.
     - type: textarea
       attributes:
-          label: Please supply a copy of your saved variables to help expediate the troubleshooting process.
+          label: Please supply a copy of your saved variables.
           description: ./WTF/Account/YOURACCOUNTNAME/SavedVariables
